[package]
name = "mqtt_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust.git", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
humantime-serde = "1.0"

[[bin]]
name = "mqtt_rust"
path = "src/main.rs"
